# make_ai_robot

./: .gitignore  README.md
src/astar_planner/: .gitignore  CMakeLists.txt  package.xml  실습자료_AStar.md
src/astar_planner/config/: params.yaml
src/astar_planner/include/astar_planner/: astar.hpp
src/astar_planner/launch/: astar_planner.launch.py
src/astar_planner/maps/: example_map.txt  simple_map.txt
src/astar_planner/rviz/: astar_planner.rviz
src/astar_planner/src/: astar.cpp  path_planner_node.cpp  simulator_node.cpp
src/environment/fuel_models/blue_cone/meshes/: model.dae
src/environment/fuel_models/box/: model.sdf
src/environment/fuel_models/box/meshes/: cardboard_box.dae
src/environment/fuel_models/circle_sign/meshes/: model.dae
src/environment/fuel_models/green_cone/meshes/: model.dae
src/environment/fuel_models/red_cone/: model.sdf
src/environment/fuel_models/red_cone/meshes/: model.dae
src/environment/worlds/: hospital.world
src/localization/: package.xml
src/localization/localization/: odom_localizer_node.py
src/module_test/: package.xml  setup.cfg  setup.py
src/module_test/launch/: interface_viewer.launch.py
src/module_test/module_test/: interface_viewer.py
src/module_test/resource/: module_test
